# Mercury_x1

./: README.md
isaacsim_example/Sim2Real/src/test_sim2real/: readme.txt  setup.cfg
isaacsim_example/Sim2Real/src/test_sim2real/test_sim2real/: receive_control_joint.py
isaacsim_example/Sim2Real/test_sim2real/: package.xml  setup.py
isaacsim_example/Sim2Real/test_sim2real/test_sim2real/: publish.py  receive_joint_information.py
isaacsim_example/lula_kinematics_example/Lula_Kinematics_python/: README.md  __init__.py  buff.txt  deepseek_scenario.txt  extension.py  extension.toml  global_variables.py  scenario.py  ui_builder.py
isaacsim_example/lula_kinematics_example/docs/: CHANGELOG.md
isaacsim_example/rmpflow_example/RmpFlow_Example_python/: README.md  __init__.py  extension.py  extension.toml  global_variables.py  output.txt  scenario.py  test.py  ui_builder.py
isaacsim_example/rmpflow_example/docs/: README.md
